--- a/css/_notas.scss
+++ b/css/_notas.scss
@@ -66,7 +66,10 @@ main{
 ol li{
     font-family: $tipo;
     margin-left: 20%;
-    p, .foto, h3{
-        margin-left: 3% !important;
-    }
+    
+    // p, .foto, h3{
+    //     margin-left: 3% !important;
+    // }
+
 }
+
