--- a/css/style.scss
+++ b/css/style.scss
@@ -1,4 +1,3 @@
-@import "contacto";
 @import "cultura";
 @import "deportes";
 @import "entrevistas";
@@ -326,39 +325,85 @@ nav{
 
 footer{
     margin-top: 5%;
-    display: flex;
+    display: grid;
     background-color: gray;
     height: 150px;
     width: 100%;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+    grid-template-areas: 
+    "footlose vacio redes";
+    &:nth-child(1){
+        grid-area: footlose;
+    }
+    &:nth-child(2){
+        grid-area: vacio;
+    }
+    &:nth-child(3){
+        grid-area: redes;
+    }
+
     .footloose {
-        margin-top: 2%;
-        margin-left: 2%;
+        margin: auto;
     }
     .redes{
-        margin-top: 35px;
-        margin-left: 25px;
-        justify-content: right;
+        margin: auto;
+        .redes__footer{
+            text-align: center;
+        }
+        .red{
+            margin: 20px;
+            .red-social{
+                width: 30px;
+                height: 30px;
+            }
+        }
     }
+    .buscador{
+        margin: auto;
+        .barra__busqueda{
+            margin: auto;
+            display: flex;
+            width: 15rem;
+            height: 3rem;
+            flex-wrap: nowrap !important;
+            font-family: 'Oswald', sans-serif;
+            .boton__busqueda{
+                margin-left: 0.625rem;
+                border-color: black;
+                background-color: black;
+                color:white;
+                border-radius: .25rem;
+            }
+        }
+    }
+}
+//     #facebook #instagram #twitter{
+//         margin: 20px;
+//         width: 30px;
+//         height: 30px;
+        
+//     }
     
-    #facebook{
-        margin: 20px;
-        width: 30px;
-        height: 30px;
-    }
-    
-    #instagram{
-        margin: 20px;
-        width: 30px;
-        height: 30px;
-    }
-    #twitter{
-        margin: 20px;
-        width: 30px;
-        height: 30px;
-    }
-    #whatsapp{
-        margin: 20px;
-        width: 30px;
-        height: 30px;
-    }
+//     #instagram{
+//         margin: 20px;
+//         width: 30px;
+//         height: 30px;
+//     }
+//     #twitter{
+//         margin: 20px;
+//         width: 30px;
+//         height: 30px;
+//     }
+//     #whatsapp{
+//         margin: 20px;
+//         width: 30px;
+//         height: 30px;
+//     }
+// }
+
+.formulario{
+    margin-top: 3%;
+    padding-left: 5%;
+    font-family: $tipo;
 }
