--- a/css/_sociedad.scss
+++ b/css/_sociedad.scss
@@ -2,36 +2,86 @@ $widht2: 600px;
 $height1: 500px;
 $tipo: 'Oswald', sans-serif;
 
-.nota__arsenico{
-    background-image: url(../imagenes/carlos-casares.png);
-    filter: grayscale(100%);
-    background-repeat: no-repeat;
-    background-size: cover;
-    border-style: none;
-    width: $widht2;
-    height: $height1;
-    margin: 2%;
-    .card-img-overlay{
-        background-color: rgba(255, 255, 255, 0.5);
+.grid-container{
+    margin-top: 5%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+    grid-template-areas:  
+    "nota__arsenico nota__siria vacio";
+    &:nth-child(1){
+        grid-area: nota__arsenico;
     }
-    .card-text{
-        text-align: center;
-        margin-top: 20%;
-        color: black;
-        font-family: 'Oswald', sans-serif;
+    &:nth-child(2){
+        grid-area: nota__siria;
     }
-}
-.nota__arsenico:hover{
-    opacity: 1;
-    transition: 1s;
-    filter: grayscale(0%);
-    
-    .card-text{
-        visibility: hidden;
-        transition: 0s;
+    &:nth-child(3){
+        grid-area: vacio;
     }
-    .card-img-overlay{
-        transition: 0s;
-        visibility: hidden;
+    .nota__arsenico{
+        background-image: url(../imagenes/carlos-casares.png);
+        filter: grayscale(100%);
+        background-repeat: no-repeat;
+        background-size: cover;
+        border-style: none;
+        width: $widht2;
+        height: $height1;
+        margin: 2%;
+        .card-img-overlay{
+            background-color: rgba(255, 255, 255, 0.5);
+        }
+        .card-text{
+            text-align: center;
+            margin-top: 20%;
+            color: black;
+            font-family: 'Oswald', sans-serif;
+        }
+    }
+    .nota__arsenico:hover{
+        opacity: 1;
+        transition: 1s;
+        filter: grayscale(0%);
+        
+        .card-text{
+            visibility: hidden;
+            transition: 0s;
+        }
+        .card-img-overlay{
+            transition: 0s;
+            visibility: hidden;
+        }
+    }
+    .nota__siria{
+        background-image: url(../imagenes/guerra-siria.png);
+        filter: grayscale(100%);
+        background-repeat: no-repeat;
+        background-size: cover;
+        border-style: none;
+        width: $widht2;
+        height: $height1;
+        margin: 2%;
+        .card-img-overlay{
+            background-color: rgba(255, 255, 255, 0.5);
+        }
+        .card-text{
+            text-align: center;
+            margin-top: 20%;
+            color: black;
+            font-family: 'Oswald', sans-serif;
+        }
+    }
+    .nota__siria:hover{
+        opacity: 1;
+        transition: 1s;
+        filter: grayscale(0%);
+        
+        .card-text{
+            visibility: hidden;
+            transition: 0s;
+        }
+        .card-img-overlay{
+            transition: 0s;
+            visibility: hidden;
+        }
     }
 }
